feat: update match detail and player profile pages